--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             
             <div id="cytoscapejs_note" class="slice">
                 <p>
-                    <img class="cytoscapejs_note_icon1" src="img/icons/triangle38.png"></img>
+                    <!--img class="cytoscapejs_note_icon1" src="img/icons/triangle38.png"></img-->
                     <img class="cytoscapejs_note_icon2" src="img/icons/triangle38.png"></img>
                     This project has been replaced by <strong><a href="http://js.cytoscape.org">Cytoscape.js</a></strong>, 
                     and is no longer active.
